# realtime-eCommerce-lakehouse

./: .gitignore  LICENSE  README.md
on_premise/: pyproject.toml
on_premise/src/: electric_vehicle.ipynb  main.py
on_premise/src/faker/: faker_builder.py
on_premise/terraform/: main.tf  storage.tf  variables.tf
