[project]
name = "on-premise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=40.15.0",
    "fastparquet>=2026.3.0",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "pyspark>=4.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
